Changing the layout for searchresults to view Maximum 5 movies on each row, got some issues with not wrapping the overflow atm

--- a/public/css/eschas.css
+++ b/public/css/eschas.css
@@ -151,3 +151,10 @@
     text-align: right;
     justify-content: space-around;
 }
+
+
+
+
+.e-1 {
+    width: 100vw;
+}
